# agentflow-studio

./: .gitignore  CLAUDE.md  README.md  SESSION_LOG.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/sandbox/: Dockerfile  validate.py
backend/scripts/: build_sandbox_image.py  count_planner_revise.py  list_mcp_tools.py  seed_conductor_history.py  seed_conductor_revise.py  seed_test_user.py  smoke_mvp.py  validate_integrations.py
backend/tests/: conftest.py  test_agent_definitions_unit.py  test_agents.py  test_agents_api.py  test_agents_owner_isolation.py  test_app_health.py  test_artifact_compression_integration.py  test_artifact_compressor.py  test_artifact_idor.py  test_audit_corrections_wave1.py  test_auth.py  test_auth_flow.py  test_block10_quality.py  test_block8_hardening.py  test_budget_idor.py  test_budget_prefs.py  test_card_hydration.py  test_cards_api.py  test_cards_projects_crud.py  test_circuit_breaker.py  test_clients.py  test_code_research_artifact.py  test_code_research_license.py  test_code_research_real_flow.py  test_conductor.py  test_config.py  test_cors_origins_settings.py  test_create_card_auto_approve_bypass.py  test_create_card_orphan_project.py  test_dashboard.py  test_dashboard_v12.py  test_debug_gate_isolation.py  test_deep_merge_meta.py  test_dev_agent.py  test_docker_sandbox_real.py  test_error_sanitization.py  test_event_bus.py  test_event_bus_extra.py  test_exception_handlers.py  (+35 more)
(+162 files in other folders)
